# crates_io_licenses_over_time

./: .gitignore  Cargo.toml  failed-to-full  selected-snapshots.json  tweaked.py
src/: main.rs
